# Vector_Graphics_Editor

./: .gitignore  CMakeLists.txt  main.cpp  vge_controller.h  vge_model.h  vge_view.h
